# commodore-defaults-commentator

./: .gitignore  Makefile  README.md  pyproject.toml
commodore_defaults_commentator/: __init__.py  cli.py  inventory.py  render.py  render_template.py
commodore_defaults_commentator/templates/: component_description.adoc.jinja2  index.adoc.jinja2  nav.adoc.jinja2
docs/: antora.yml
tests/: test_commodore_defaults_commentator.py
